--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,16 @@ dependencies:
   uuid:
   mask_text_input_formatter: ^2.0.0
 
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  # FluterFire
+  firebase_core: ^1.11.0
+  firebase_auth: ^3.3.5
+  cloud_firestore: ^3.1.6
 
 
 dev_dependencies:
@@ -91,3 +98,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+   - family: Comfortaa
+     fonts:
+       - asset: assets/fonts/comfortaa/Comfortaa-Light.ttf
+         weight: 300
+       - asset: assets/fonts/comfortaa/Comfortaa-Regular.ttf
+         weight: 400
+       - asset: assets/fonts/comfortaa/Comfortaa-Medium.ttf
+         weight: 500
+       - asset: assets/fonts/comfortaa/Comfortaa-SemiBold.ttf
+         weight: 600
+       - asset: assets/fonts/comfortaa/Comfortaa-Bold.ttf
+         weight: 700
