--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   mask_text_input_formatter: ^2.0.0
   provider: ^6.0.2
   rxdart: ^0.27.3
+  pdf: ^3.7.0
+  path_provider: ^2.0.8
+  printing: ^5.7.1
+  signature: ^5.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,7 +48,7 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
   cloud_firestore: ^3.1.6
-
+  firebase_storage: ^10.2.6
 
 dev_dependencies:
   flutter_test:
@@ -69,9 +73,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/inventario_dor_body_back.png
+   - assets/images/inventario_dor_body_front.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
