--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.8
   printing: ^5.7.1
   signature: ^5.0.0
+  flutter_launcher_icons: ^0.9.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,6 +50,17 @@ dependencies:
   firebase_auth: ^3.3.5
   cloud_firestore: ^3.1.6
   firebase_storage: ^10.2.6
+
+#  Internationalization
+  flutter_localizations:
+    sdk: flutter
+
+flutter_icons:
+  #  image_path: "assets/images/icon-128x128.png"
+  image_path_android: "assets/icons/android_icons/4x/Asset1xxxhdpi.png"
+  image_path_ios: "assets/icons/ios_icons/3x/Asset3@3x.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +88,7 @@ flutter:
   assets:
    - assets/images/inventario_dor_body_back.png
    - assets/images/inventario_dor_body_front.png
+   - assets/icons/android_icons/1x/Asset1mdpi.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
