--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   printing: ^5.7.1
   signature: ^5.0.0
   flutter_launcher_icons: ^0.9.2
+  flutter_phoenix: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,10 +51,12 @@ dependencies:
   firebase_auth: ^3.3.5
   cloud_firestore: ^3.1.6
   firebase_storage: ^10.2.6
+  firebase_crashlytics: ^2.5.1
 
-#  Internationalization
+  #  Internationalization
   flutter_localizations:
     sdk: flutter
+
 
 flutter_icons:
   #  image_path: "assets/images/icon-128x128.png"
